# pyqcc

./: .gitignore  README.md  pyproject.toml
pyspc/ccharts/: xbar_sbar.py
src/pyqcc/: __init__.py  pyqcc.py  results.py  rules.py
src/pyqcc/ccharts/: c.py  ccharts.py  cusum.py  ewma.py  hotelling.py  imrmr.py  imrr.py  imrstd.py  imrx.py  mr.py  np.py  p.py  tables.py  u.py  xbar_rbar.py  xbar_sbar.py
src/pyqcc/sampledata/: __init__.py  pistonrings.csv
tests/: pyspc_test.py
