[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyqcc_jeub"
version = "0.0.1"
authors = [
  { name="James Eubanks", email="jeubanks.github@gmail.com" },
  { name="Carlos Silva", email="carlosqsilva@outlook.com" }
]
description = "Python Quality Control Charts"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPLv3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jeub/pyqcc"
"Bug Tracker" = "https://github.com/jeub/pyqcc/issues"