[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyqcc"
version = "0.1.7"
authors = [
  { name="James Eubanks", email="jeubanks.github@gmail.com" },
  { name="Carlos Silva", email="carlosqsilva@outlook.com" }
]
description = "Python Quality Control Charts"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Mathematics"
]
dependencies = [
    "pandas >= 1.1.0" ,
    "numpy >= 1.23.3",
    "scipy >= 1.9.1",
    "matplotlib < 3.6.0",
    'tomli; python_version < "3.11"'
]

[project.optional-dependencies]
test = []

[project.urls]
"Homepage" = "https://github.com/jeub/pyqcc"
"Bug Tracker" = "https://github.com/jeub/pyqcc/issues"

[tool.bumpver]
current_version = "0.1.7"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]

[tool.setuptools.package-data]
"pyqcc.sampledata" = ["*.csv"]

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]
"src/pyqcc/__init__.py" = [
    "{version}"
]
"README.md" = [
    "{version}"
]
